--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,18 @@
 <body>
     <h1>Creating a chat app</h1>
     <p>Welcome to the chat app</p>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        var socket = io();
+
+        socket.on('connect', () => {
+            console.log('Connected to server');
+        });
+
+        socket.on('disconnect', () => {
+            console.log('Disconnected!');
+        });
+    </script>
 </body>
 </html>
