Add Users class and updateUserList event

--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
             </div>
             <div class="form-field">
                 <label for="name">Display name</label>
-                <input id="name" type="text" name="name" autofocus/>
+                <input id="name" type="text" name="name" autofocus required/>
             </div>
             <div class="form-field">
                 <label for="room">Room name</label>
-                <input id="room" type="text" name="room" />
+                <input id="room" type="text" name="room" required/>
             </div>
             <div class="form-field">
                 <button>Join</button>
